# Lab-website

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
.github/workflows/workflows/: ci.yml
contact/: index.html
docs/: alumni.en.md  alumni.md  contact.en.md  contact.md  index.en.md  index.md  member.en.md  member.md  publications.bib  publications.en.md  publications.md  research.en.md  research.md
docs/assets/stylesheets/: members.css
docs/javascripts/: custom.js
docs/stylesheets/: custom.css
en/: index.html
en/contact/: index.html
en/member/: index.html
en/publications/: index.html
en/research/: index.html
member/: index.html
publications/: index.html
research/: index.html
search/: search_index.json
